# GET-211-C-and-Python-Practice-

./: CMakeLists.txt  PRACTICE9.cpp  Third.cpp  arduino.cpp  check.py  controller.cpp  dht_sensor.cpp  dht_sensor.h  finaltask.cpp  first.cpp  hygrow.cpp  new.py  new2.py  newpractice.cpp  pointers.cpp  practice.cpp  practice.py  practice_10.py  practice_11.py  practice_11_test.py  practice_12_test.py  practice_13_test.py  practice_14_test.py  practice_15_test.py  practice_2.py  practice_4.py  practice_5.py  practice_6.py  practice_7.py  practice_8.py  practice_9.py  practice_92.py  practice_test_10.py  recursive.py  relar_controller.cpp  relay-controller.h  rev.py  rev2.py  revis.py  second.cpp  (+28 more)
