cmake_minimum_required(VERSION 4.0)
project(GET211)

set(CMAKE_CXX_STANDARD 20)

add_executable(GET211
        first.cpp
        Third.cpp
        practice.cpp
        task2.cpp
        "task3 .cpp"
        task4.cpp
        finaltask.cpp
        task5.cpp
        task6.cpp
        task8.cpp
        task8.h
        test.cpp
        task10.cpp
        task11.cpp
        task12.cpp
        task13.cpp
        task14.cpp
        task15.cpp
        task20.cpp
        task20.h
        "task 21.cpp"
        "task 22.cpp"
        task23.cpp
        "task 24.cpp"
        "task 25.cpp"
        "task 26.cpp"
        "task 27.cpp"
        pointers.cpp
        task27.cpp
)
